--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <title>Jogging 2019</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <!--<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <app-root>Loading...</app-root>
 </body>
-</html>
+
