reset lijst geïmplementeerd

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="nl">
 <head>
   <meta charset="utf-8">
   <title>Jogging 2019</title>
@@ -9,4 +11,5 @@
 <body>
 <app-root>Loading...</app-root>
 </body>
+</html>
 
